--- a/public/game.html
+++ b/public/game.html
@@ -86,13 +86,19 @@
                                 this.textContent = this.textContent.slice(0, 1); // Limiter à un seul caractère
                             }
                             if (this.textContent.length === 1) {
-                                const nextCell = this.nextElementSibling;
-                                if (nextCell && nextCell.contentEditable === "true") {
-                                    nextCell.focus();
-                                }
-                            }                            
-                        });
-                    } else {
+                const nextCell = this.nextElementSibling;
+                if (nextCell && nextCell.contentEditable === "true") {
+                    nextCell.focus();
+                }
+            }
+        });
+        // Ajout pour empêcher la navigation au "Entrée"
+        tableCell.addEventListener('keydown', function(event) {
+            if (event.key === 'Enter') {
+                event.preventDefault(); // Empêcher le comportement par défaut de la touche "Entrée"
+            }
+        });
+    } else {
                         tableCell.textContent = ''; // Laisser les autres cases vides pour les essais
                     }
                     tableRow.appendChild(tableCell);
